--- a/src/App.css
+++ b/src/App.css
@@ -114,3 +114,24 @@
   font-size: 20px;
   cursor: pointer;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  border-radius: 10px; /* Add this line to match the border-radius */
+}
+.user-info-form {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  width: 80%;
+  height: 60%;
+}
