--- a/src/App.css
+++ b/src/App.css
@@ -87,20 +87,20 @@
   right: 20px;
   bottom: 40px;
   width: 20%;
-  height: 60%;
+  height: 65%;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  border-radius: 20px;
 }
 
 .custom-modal-content {
   background: white;
   width: 100%;
   height: 100%;
-  padding: 20px;
-  border-radius: 10px;
+  border-radius: 20px;
   position: relative;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -111,6 +111,7 @@
   right: 10px;
   background: none;
   border: none;
+  color: white; /* Đặt màu của nút là màu trắng */
   font-size: 20px;
   cursor: pointer;
 }
@@ -126,12 +127,18 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  border-radius: 10px; /* Add this line to match the border-radius */
+  border-radius: 20px;
 }
 .user-info-form {
   background-color: #fff;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 20px;
   width: 80%;
   height: 60%;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  position: absolute;
 }
